[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytoolkit"
version = "0.1.0"
description = "A terminal-based super-fast toolkit collection"
readme = "README.md"
authors = [
    { name = "Md. Maruf Sarker", email = "mmsmaruf.official@gmail.com" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "Pillow>=10.0.0",
    "customtkinter>=5.2.0",
    "tkinterdnd2>=0.4.2",
]
requires-python = ">=3.8"

[project.scripts]
pytoolkit = "pytoolkit.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py38"
